Code cleanup, fix issue with pop-up appearing off-center, and make JS an immediately-invoked function

--- a/tapestry.css
+++ b/tapestry.css
@@ -30,7 +30,7 @@
 }
 
 .node .expandGrandchildren {
-    fill: #DDD;
+    fill: #999;
 }
 
 .node:hover .expandGrandchildren {
